Fixed text overlapping picture on all but index site

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,8 @@ div {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50vh;
+    height: 50%;
+    max-height: 50%;
     overflow:auto;
     background-size: cover;
 }
@@ -156,7 +157,7 @@ div {
     padding: 16px;
     margin: 0 auto;
     position: relative;
-    top: 420px;
+    top: 50vh;
 }
 
 div.filter h4{
